sonar fix and remove initial field